# QRAM

./: .gitignore  Htreemapping.py  bucket-brigade-cswap.py  bucket-brigade-cswap_data.py  bucket-brigade-cswap_data2level.py  bucket-brigade-cswap_datacell.py  bucket-brigade-iswap.py  bucket-brigade-simplify.py  dcwapOpt.py  doubletele.py  dtelefeed.py  environment_gpu.yml  iswapgate.py  mapping_grid.py  mapping_qram.py  pyproject.toml  qram3level.py  qramthreelevel.py  qramtwolevel.py  requirements.txt  swapopt.py
cpflow/: __init__.py  circuit_assembly.py  cp_utils.py  exact_decompositions.py  gates.py  main.py  matrix_utils.py  optimization.py  penalty.py  setup.py  topology.py  trigonometric_utils.py
gates/: cswap.qasm  cswapUminusone.qasm  cswap_control_mid.qasm
old/: bucket-brigade-cswap.py  bucket-brigade-cswap_data2level.py  bucket-brigade-cswap_datacell.py  bucket-brigade-simplify.py
qram/: config.py
realdata/: Fig1c_depthoptimization.ipynb  depth.ipynb  draw_noise.ipynb
realdevice/: circuit.ipynb  couple_cz.pkl  cswap_102.qasm  cswap_201.qasm  noisecircuit.py  qram3level.py
results/: counts_data.csv  cswap  dcswap  draw_noise.ipynb  drawabalition.ipynb  h_tree.csv
simulations/: datacounts.py  densitysim.py  densitysimDD.py  densitysimErrorrate.py  densitysimFanout.py  densitysimGHZ.py  densitysimHall.py  densitysim_noinit.py  singleaddresssim.py
subspaceAppro/: cswapSubspace.py  cswapUgate.py  cswapadaptive.py  swapopt.py  twoqubitunitary.py
teleportation/: doubletele.py  teleportation.py
testing/: test_densitysim.py  test_layeredcircuit.py
(+60 files in other folders)
