[project]
name = "qram"
version = "0.1"
description = "quantum random access memory project"
authors = [
    {name = "Debin Xiang", email = "db.xiang@zju.edu.cn"},
    {name = "Jiyu Jie", email = "jiyujie@zju.edu.cn"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "qiskit<1.0",
    "qiskit_aer",
    "matplotlib",
    "hyperopt",
    "optax",
    "chex",
    "pylatexenc",
    "jax",
    "jaxlib",
    "dill",
    "ray",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "qutip==4.5.3",
    "numpy<1.22",
    "pandas<1.4",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qram"]  # 只包含 qram 包

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
